# SolarSystemOpenGl

./: .gitignore  CMakeLists.txt  README.md  SolarSystem.sln
Dependencies/glew-2.1.0/lib/Debug/Win32/: glew32sd.lib
Dependencies/glew-2.1.0/lib/Debug/x64/: glew32d.exp  glew32d.lib  glew32sd.lib
Dependencies/glew-2.1.0/lib/Release/Win32/: glew32s.lib
Dependencies/glew-2.1.0/lib/Release/x64/: glew32s.lib
SolarSystem/: SolarSystem.vcxproj
SolarSystem/resources/models/sun2/: sun.mtl
SolarSystem/resources/shaders/: line.vs  modelLoading.frag  skybox.vs
SolarSystem/src/: Camera.h  Mesh.h  Model.h  Planet.h  Shader.h  Skybox.h  Texture.h  main.cpp
SolarSystem/x64/Debug/: SolarSystem.exe.recipe  SolarSystem.ilk  vc143.idb
SolarSystem/x64/Debug/SolarSystem.tlog/: CL.command.1.tlog  CL.write.1.tlog  SolarSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SolarSystem/x64/Release/: SolarSystem.exe.recipe  SolarSystem.iobj  SolarSystem.ipdb
SolarSystem/x64/Release/SolarSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SolarSystem.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Web/: SolarSystemWebPage.html
Web/SolarSystemWebPage_files/: filelist.xml
